# AD-Fin-Project

./: .gitignore  README.md  pyproject.toml  treasury_dataset.csv
alpin/: __init__.py  core.py  metrics.py  partition.py  risk.py  visualization.py
alpin/baselines/: __init__.py  ttest.py
alpin/data/: __init__.py  loader.py  synthetic.py
alpin/experiments/: __init__.py  sweep.py
docs/: paper.aux  paper.bak0  paper.blg  paper.out  paper.tex  references.bib
docs/obsidian-vault/: _Index.md
docs/obsidian-vault/.obsidian/: workspace.json
docs/obsidian-vault/API-Reference/: ALPIN-Class.md  Data-Functions.md  Metrics-Functions.md  Visualization-Functions.md
docs/obsidian-vault/Algorithms/: ALPIN-Algorithm.md  BatchCP-Filtering.md  Optimal-Partition.md  Risk-Minimization.md
docs/obsidian-vault/Architecture/: Data-Flow.md  DeepCAR-Architecture.md  Module-Dependencies.md  Project-Overview.md
docs/obsidian-vault/Concepts/: Changepoint-Detection.md  Evaluation-Metrics.md  Excess-Risk.md  Penalty-Parameter.md  Time-Series-Forecasting.md
docs/obsidian-vault/Modules/: Baselines-TTest.md  Core-ALPIN.md  Data-Loader.md  Data-Synthetic.md  Experiments-Sweep.md  Metrics.md  Partition.md  Risk.md  Visualization.md
docs/obsidian-vault/Notebooks/: 01-Quickstart-Guide.md  02-Training-Guide.md  03-Analysis-Guide.md  04-DeepCAR-Experiment.md
docs/obsidian-vault/Tutorials/: Getting-Started.md  Making-Predictions.md  Running-DeepCAR.md  Training-ALPIN.md
notebooks/: 01_quickstart.ipynb  01_quickstart.py  02_training.ipynb  02_training.py  03_analysis.ipynb  03_analysis.py  04_deepcar_experiment.ipynb  04_deepcar_experiment.py  05_treasury_experiment.py
