[project]
name = "alpin-course-project"
version = "0.1.0"
description = "ALPIN course project - Change point detection"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "ruptures",
    "matplotlib",
    "plotly",
    "jupyter",
    "scikit-learn",
    "joblib",
    "pandas",
    "tqdm>=4.67.1",
    "pytorch-forecasting",
    "pytorch-lightning",
    "torch",
    "jupytext>=1.19.1",
]

[tool.uv]
managed = true
