[project]
name = "alpin-AD-project"
version = "0.1.0"
description = "Team Apline, change point detection Anomaly Detection project"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "ruptures",
    "matplotlib",
    "plotly",
    "jupyter",
    "scikit-learn",
    "joblib",
    "pandas",
    "tqdm>=4.67.1",
    "pytorch-forecasting",
    "pytorch-lightning",
    "torch",
    "jupytext>=1.19.1",
]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpin*"]
exclude = ["notebooks*", "docs*"]
